<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Actividades</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_actividad_detalle">ActividadDetalle</string>
    <string name="title_activity_actividad_lista">ActividadLista</string>
    <string name="title_activity_editar">Añadir</string>
    <string name="borrar">Borrar</string>
    <string name="editar">Editar</string>
    <string name="pick_time">TIME</string>
    <string name="hora">Hora:</string>
    <string name="llegada">Llegada</string>
    <string name="salida">Salida</string>
    <string name="fecha">Fecha:</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

</resources>
